--- a/client/style/style.css
+++ b/client/style/style.css
@@ -13,3 +13,18 @@
     padding: 5px;
 }
 
+.lobby-zone > span {
+    border-style: solid;
+    background-color: rgb(94, 188, 157);
+    border-color: rgb(182, 182, 182);
+    border-width: 2px;
+    max-width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    padding: 5px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-column-gap: 30px;
+    padding-left: 15px;
+}
+
