--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,5 +1,30 @@
+* {
+    font-family: 'Kanit', sans-serif;
+}
+
+body {
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#display-message {
+    background-color: azure;
+}
+
+#chat-panel {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 10;
+}
+
+#message {
+    overflow-y: scroll;
+}
+
 .chat-zone {
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .chat-zone > span {
@@ -10,6 +35,9 @@
     background-color: cadetblue;
     max-width: 200px;
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px;
 }
 
+.chat-zone.me > div {
+    background-color: silver;
+}
