--- a/client/style/style.css
+++ b/client/style/style.css
@@ -5,34 +5,51 @@
 body {
     height: 100vh;
     margin: 0;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 50px auto;
 }
 
 #lobby {
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
+    width: 200px;
     overflow-y: scroll;
     background-color: grey;
 }
 
 #message {
-    flex-grow: 3;
+    display: grid;
+    grid-template-rows: auto 50px;
+    width : auto;
 }
 
 #display-message {
     background-color: azure;
+    overflow-y: scroll;
+}
+
+#message-bottom {
+    display: grid;
+    grid-template-columns: 350px auto;
+    margin-left: 10px;
+}
+
+#message-input {
+    display: grid;
+    grid-template-columns: 90% auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 10px;
+}
+
+#color-picker {
+    padding-top: 10px;
 }
 
 #chat-panel {
-    display: flex;
+    display: grid;
     flex-direction: row;
-    flex-grow: 10;
-}
-
-#message {
-    overflow-y: scroll;
+    grid-template-columns: 200px auto;
 }
 
 #account {
